Have PackageKit only execute files installed by the package

BUG: 389036